--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,8 @@
         <activity android:name=".ui.activity.LoginActivity" />
         <activity android:name=".ui.activity.OrderActivity" />
         <activity android:name=".ui.activity.RegisterActivity" />
-        <activity android:name=".ui.activity.ProductListActivity"></activity>
+        <activity android:name=".ui.activity.ProductListActivity" />
+        <activity android:name=".ui.activity.ProductDetailActivity"></activity>
     </application>
 
 </manifest>
